test/sema/initializer-autogenerated-argument-type-mismatch.delta.output
initializer-autogenerated-argument-type-mismatch.delta:5:15: error: invalid argument #1 type 'float' to 'S', expected 'int'
    var s = S(5.4);
              ^
