test/sema/initializer-autogenerated-argument-type-mismatch.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    // CHECK: [[@LINE+1]]:15: error: invalid argument #1 type 'float' to 'S', expected 'int'
    var s = S(5.4);
}

struct S {
    int x;
}
